--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -21,7 +21,7 @@ body,
 }
 
 .spacer {
-  height: 100%;
+  height:100%;
 }
 
 .bubble-wrap {
@@ -31,7 +31,7 @@ body,
 }
 
 .colors-wrap {
-  height: 100%;
+  height: 1200px;
   width: 300px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 
@@ -59,9 +59,11 @@ body,
   border: 1px lightgray solid;
   margin-right: 36px;
 }
-
+#root{
+  height: 100vh;
+}
 form {
-  margin-top: 60px;
+  //margin-top: 60px;
   display: flex;
   flex-direction: column;
 
